diesel_compile_tests/tests/fail/cannot_use_postgres_functions_with_sqlite_mysql.stderr
error[E0277]: `to_json<Text, name>` is no valid SQL fragment for the `Sqlite` backend
    --> tests/fail/cannot_use_postgres_functions_with_sqlite_mysql.rs:20:27
     |
  LL |     let _ = query.execute(sqlite_connection);
     |                   ------- ^^^^^^^^^^^^^^^^^ the trait `QueryFragment<Sqlite>` is not implemented for `to_json<Text, name>`
     |                   |
     |                   required by a bound introduced by this call
     |
     = note: this usually means that the `Sqlite` database system does not support 
             this SQL syntax
help: the trait `QueryFragment<Sqlite, diesel::query_builder::private::NotSpecialized>` is not implemented for `to_json<Text, name>`
      but trait `QueryFragment<Pg, diesel::query_builder::private::NotSpecialized>` is implemented for it
    --> DIESEL/diesel/diesel/src/pg/expression/functions.rs
     |
  LL | #[declare_sql_function]
     | ^^^^^^^^^^^^^^^^^^^^^^^
     = help: for that trait implementation, expected `Pg`, found `Sqlite`
     = note: required for `SelectClause<to_json<Text, name>>` to implement `QueryFragment<Sqlite>`
     = note: 2 redundant requirements hidden
     = note: required for `SelectStatement<FromClause<table>, SelectClause<to_json<Text, name>>>` to implement `QueryFragment<Sqlite>`
     = note: required for `SelectStatement<FromClause<table>, SelectClause<to_json<Text, name>>>` to implement `ExecuteDsl<diesel::SqliteConnection, Sqlite>`
note: required by a bound in `diesel::RunQueryDsl::execute`
    --> DIESEL/diesel/diesel/src/query_dsl/mod.rs
     |
LL |     fn execute(self, conn: &mut Conn) -> QueryResult<usize>
     |        ------- required by a bound in this associated function
...
LL |         Self: methods::ExecuteDsl<Conn>,
     |               ^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `RunQueryDsl::execute`
  
          = note: this error originates in the attribute macro `declare_sql_function` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: `to_json<Text, name>` is no valid SQL fragment for the `Mysql` backend
    --> tests/fail/cannot_use_postgres_functions_with_sqlite_mysql.rs:22:27
     |
  LL |     let _ = query.execute(mysql_connection);
     |                   ------- ^^^^^^^^^^^^^^^^ the trait `QueryFragment<Mysql>` is not implemented for `to_json<Text, name>`
     |                   |
     |                   required by a bound introduced by this call
     |
     = note: this usually means that the `Mysql` database system does not support 
             this SQL syntax
help: the trait `QueryFragment<Mysql, diesel::query_builder::private::NotSpecialized>` is not implemented for `to_json<Text, name>`
      but trait `QueryFragment<Pg, diesel::query_builder::private::NotSpecialized>` is implemented for it
    --> DIESEL/diesel/diesel/src/pg/expression/functions.rs
     |
  LL | #[declare_sql_function]
     | ^^^^^^^^^^^^^^^^^^^^^^^
     = help: for that trait implementation, expected `Pg`, found `Mysql`
     = note: required for `SelectClause<to_json<Text, name>>` to implement `QueryFragment<Mysql>`
     = note: 2 redundant requirements hidden
     = note: required for `SelectStatement<FromClause<table>, SelectClause<to_json<Text, name>>>` to implement `QueryFragment<Mysql>`
     = note: required for `SelectStatement<FromClause<table>, SelectClause<to_json<Text, name>>>` to implement `ExecuteDsl<diesel::MysqlConnection, Mysql>`
note: required by a bound in `diesel::RunQueryDsl::execute`
    --> DIESEL/diesel/diesel/src/query_dsl/mod.rs
     |
LL |     fn execute(self, conn: &mut Conn) -> QueryResult<usize>
     |        ------- required by a bound in this associated function
...
LL |         Self: methods::ExecuteDsl<Conn>,
     |               ^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `RunQueryDsl::execute`
  
          = note: this error originates in the attribute macro `declare_sql_function` (in Nightly builds, run with -Z macro-backtrace for more info)
For more information about this error, try `rustc --explain E0277`.
